try to add swagger but not complete ❌
