# authservice/docs/swagger.yaml
@@ -1,4 +1,99 @@
+definitions:
+  controllers.SigninRequest:
+    properties:
+      email:
+        type: string
+      passwordhash:
+        type: string
+    type: object
+  controllers.SigninResponse:
+    properties:
+      token:
+        type: string
+    type: object
+  controllers.SignupRequest:
+    properties:
+      email:
+        type: string
+      passwordhash:
+        type: string
+    type: object
+  controllers.SignupResponse:
+    properties:
+      token:
+        type: string
+    type: object
 info:
   contact: {}
-paths: {}
+paths:
+  /signin:
+    post:
+      consumes:
+      - application/json
+      description: Sign in with email and password
+      parameters:
+      - description: User signin info
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/controllers.SigninRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/controllers.SigninResponse'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "401":
+          description: Unauthorized
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Sign in a user and obtain a JWT token
+  /signup:
+    post:
+      consumes:
+      - application/json
+      description: Register a new user with email and password
+      parameters:
+      - description: User signup info
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/controllers.SignupRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/controllers.SignupResponse'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Register a new user
 swagger: "2.0"
